# WaveParticles

./: CMakeLists.txt  README.md  f5.sh
cmake/: CGRAFunctions.cmake
ext/imgui/: CMakeLists.txt
ext/stb/: stb.c
res/: CMakeLists.txt
res/assets/: interaction_s1.amc  interaction_s2.amc  testskeleton1.asf  testskeleton2.asf
res/shaders/: color_frag.glsl  color_frag_fire.glsl  color_vert.glsl  color_vert_fire.glsl  landShader.glsl  waterShader.glsl
src/: CMakeLists.txt  application.cpp  application.hpp  emitter.cpp  emitter.hpp  main.cpp  opengl.hpp  particle.cpp  particle.hpp  particle_system.cpp  particle_system.hpp  skeleton.cpp  skeleton.hpp  skeleton_model.cpp  skeleton_model.hpp  water.hpp  water.hpp.h
src/cgra/: CMakeLists.txt  cgra_geometry.cpp  cgra_geometry.hpp  cgra_gui.cpp  cgra_gui.hpp  cgra_image.hpp  cgra_mesh.cpp  cgra_mesh.hpp  cgra_shader.cpp  cgra_shader.hpp  cgra_wavefront.hpp
