
#########################################################
# Source Files
#########################################################

# ----TODO------------------- #
# list your source files here #
# --------------------------- #
SET(sources
	"application.hpp"
	"application.cpp"

	"skeleton.hpp"
	"skeleton.cpp"
	"skeleton_model.hpp"
	"skeleton_model.cpp"
	
	"opengl.hpp"

	"main.cpp"

	"CMakeLists.txt"
	"emitter.cpp"
	"emitter.hpp"
	"particle.cpp"
	"particle.hpp"
	"particle_system.cpp"
	"particle_system.hpp"
	"water.hpp"
)

# Add executable target and link libraries
add_executable(${CGRA_PROJECT} ${sources})

# ----TODO--------------------- #
# list your subdirectories here #
# ----------------------------- #
add_subdirectory(cgra)



#########################################################
# Link and Build Executable
#########################################################

# Set source groups (helper method)
target_source_group_tree(${CGRA_PROJECT})

# Set working folder
target_compile_definitions(${CGRA_PROJECT} PRIVATE "-DCGRA_SRCDIR=\"${PROJECT_SOURCE_DIR}\"")

# Link usage requirements
target_link_libraries(${CGRA_PROJECT} PRIVATE glew glfw ${GLFW_LIBRARIES})
target_link_libraries(${CGRA_PROJECT} PRIVATE stb imgui)

# For experimental <filesystem>
if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
	target_link_libraries(${CGRA_PROJECT} PRIVATE -lstdc++fs)
endif()
